src/test/ui/underscore-lifetime/where-clause-trait-impl-underscore.rust2015.stderr
error[E0637]: `'_` cannot be used here
  --> $DIR/where-clause-trait-impl-underscore.rs:11:19
   |
LL |     T: WithRegion<'_>
   |                   ^^ `'_` is a reserved lifetime name

error: aborting due to previous error

